


v.092a
----

- Added button to ad new files
- Rename files from inside the list

Backend:
    - Refactor actions, with command pattern.
    - Writed tests on commands
    - Json list, detect text files. Added property at File{IsText}

Frontend: UI
    Features:
    - Edit files with codemirror
    - Compress files in tar.gz
    - Copy files

    Refactor:
    - Flash messenger as a service
    - Data Commands, as a service ServerCommand
    - Multiselect items, and action for deleting them
    