@@ -6,11 +6,14 @@ const templateList = `
   <head>
     <meta charset="utf-8">
     
+
+    
     <link rel="stylesheet" href="//cdn.jsdelivr.net/codemirror/4.3.0/codemirror.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/codemirror/4.3.0/theme/monokai.css">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" 
         rel="stylesheet" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.css" >
     <!--
     <script src="//cdn.jsdelivr.net/g/codemirror"></script>
     -->
@@ -23,8 +26,10 @@ const templateList = `
     <script src="//cdn.jsdelivr.net/codemirror/4.3.0/mode/markdown/markdown.js"></script>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"> </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.js"> </script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"> </script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-sanitize.js"></script>
     <script src="//cdn.jsdelivr.net/angular.bootstrap/0.11.0/ui-bootstrap-tpls.js"> </script>
     <script src="//cdn.jsdelivr.net/angular.bootstrap/0.11.0/ui-bootstrap-tpls.min.js"> </script>
     
@@ -77,10 +82,17 @@ const templateList = `
     .renameinput button { position:absolute; left:81%; top:4px; }
     .renameinput button.btn-default { position:absolute; left:88%; top:4px; }
 
+ /*!
+ * ui-select
+ * http://github.com/angular-ui/ui-select
+ * Version: 0.3.1 - 2014-07-12T16:26:10.171Z
+ * License: MIT
+ */.ui-select-highlight{font-weight:700}.ui-select-offscreen{clip:rect(0 0 0 0)!important;width:1px!important;height:1px!important;border:0!important;margin:0!important;padding:0!important;overflow:hidden!important;position:absolute!important;outline:0!important;left:0!important;top:0!important}.ng-dirty.ng-invalid>a.select2-choice{border-color:#D44950}.selectize-input.selectize-focus{border-color:#007FBB!important}.selectize-control>.selectize-dropdown,.selectize-control>.selectize-input>input{width:100%}.ng-dirty.ng-invalid>div.selectize-input{border-color:#D44950}.btn-default-focus{color:#333;background-color:#EBEBEB;border-color:#ADADAD;text-decoration:none;outline:-webkit-focus-ring-color auto 5px;outline-offset:-2px;box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)}.input-group>.ui-select-bootstrap.dropdown{position:static}.input-group>.ui-select-bootstrap>input.ui-select-search.form-control{border-radius:4px 0 0 4px}.ui-select-bootstrap>.ui-select-match{text-align:left}.ui-select-bootstrap>.ui-select-match>.caret{position:absolute;top:45%;right:15px}.ui-select-bootstrap>.ui-select-choices{width:100%;height:auto;max-height:200px;overflow-x:hidden}.ui-select-bootstrap .ui-select-choices-row>a{display:block;padding:3px 20px;clear:both;font-weight:400;line-height:1.42857143;color:#333;white-space:nowrap}.ui-select-bootstrap .ui-select-choices-row>a:focus,.ui-select-bootstrap .ui-select-choices-row>a:hover{text-decoration:none;color:#262626;background-color:#f5f5f5}.ui-select-bootstrap .ui-select-choices-row.active>a{color:#fff;text-decoration:none;outline:0;background-color:#428bca}.ui-select-match.ng-hide-add,.ui-select-search.ng-hide-add{display:none!important}.ui-select-bootstrap.ng-dirty.ng-invalid>button.btn.ui-select-match{border-color:#D44950}
+
     </style>
 <script>
 var fMgr = angular.module('fMgr', ['tableSort', 'ui.bootstrap', 
-        'ui.codemirror', 'tempoModule']);
+        'ui.codemirror', 'tempoModule', 'ui.select', 'ngSanitize']);
 
 fMgr.config(['$locationProvider', function($locationProvider){
     $locationProvider.html5Mode(true);
@@ -178,7 +190,7 @@ fMgr.factory('ServerCommand', function($http, $q, Flash){
     }
 
     var on_error = function(data) {
-        console.log(data)
+        //console.log(data)
         Flash.error("server error")
     }
 
@@ -530,7 +542,31 @@ fMgr.controller("ListCtr", function($scope, $http, $location,
 })
     
 
+fMgr.controller("FinderCtrl", function($scope, $http, $location){
+    
+    $scope.dirs = []
+    $scope.item = {}
+    $scope.getData = function(params) {
+        //console.log(params)
+        var q = params
+        if(q.length < 3)
+            return
+        
+        return $http.get("/-/api/dirs?q=" + q, {}).then(
+            function(response) {
+                $scope.dirs = response.data
+            });
+    }
 
+    
+    /*$scope.dselected = ''*/
+    $scope.$watch('item.selected', function(nvalue, ovalue) {
+        //console.log(old, nl)
+        if(nvalue)
+            $location.path("/" + nvalue.path + "/")
+    })
+
+})
 
 
 
@@ -559,12 +595,27 @@ fMgr.controller("ListCtr", function($scope, $http, $location,
 
 <div class="row">
 
-<div class="col-md-12">
+<div class="col-md-8">
     <ol class="breadcrumb">
         <li><a href="/"><span class="glyphicon glyphicon-home"> </span></a></li>
         <li ng-repeat="item in Rutas"><a href="{{ item.url }}">{{ item.name }}</a></li> 
     </ol>
+</div>
 
+<div class="col-md-4" ng-controller="FinderCtrl">
+    <form role="form">
+        <ui-select type="text" ui-select2="s2opts" 
+            width="100%" ng-model="item.selected"
+            >
+        <ui-select-match placeholder="Dir finder">/{{$select.selected.path}}</ui-select-match>
+        <ui-select-choices repeat="item in dirs"
+             refresh="getData($select.search)"
+             refresh-delay="0">
+             <span class="glyphicon glyphicon-folder-close dir"></span> &nbsp; /<span ng-bind-html="item.path | highlight: $select.search"> </span>
+        </ui-select-choices>
+      <!--<div ng-bind-html="$select.search"></div>-->
+    </ui-select-choices>
+    </form>
 </div>
 
 </div>
@@ -748,7 +799,7 @@ fMgr.controller("ListCtr", function($scope, $http, $location,
         ng-click="Show($event)">    
         <a href="{{ Path }}{{ item.Name }}" target="_self" 
             ng-if="!item.IsDir">{{ item.Name }}</a>
-        <a href="{{ item.Name }}/" ng-if="item.IsDir" class="dir">{{ item.Name }}</a>
+        <a  ng-click="Go(item.Name)" ng-if="item.IsDir" class="dir">{{ item.Name }}</a>
     
 
     <div class="col-md-12 renameinput inline-form" ng-show="showrename==true">
@@ -765,7 +816,7 @@ fMgr.controller("ListCtr", function($scope, $http, $location,
 
 var tempoModule = angular.module('tempoModule', ['ui.bootstrap']);
 
-tempoModule.directive('inlineEdit', function($log, $position, ServerCommand){
+tempoModule.directive('inlineEdit', function($log, $location, $position, ServerCommand){
 
     return {
         templateUrl: "/inline-edit.html",
@@ -819,6 +870,10 @@ tempoModule.directive('inlineEdit', function($log, $position, ServerCommand){
 
         }
 
+        $scope.Go = function(route) {
+            $location.url( $scope.Path + route + "/" )
+        }
+
     }
 
     
@@ -851,8 +906,8 @@ tempoModule.directive('inlineModal', function($log, $position, ServerCommand){
         res.width = '200px'
         res.left -= 50
         res.top += 40
-              // Now set the calculated positioning.
-        $log.log(res)
+        
+        //$log.log(res)
         content.css({
             'top': 35, 
             'left': res.left,
@@ -1209,7 +1264,13 @@ angular.module('ui.codemirror', [])
   }]);
 
 
-
+/*!
+ * ui-select
+ * http://github.com/angular-ui/ui-select
+ * Version: 0.3.1 - 2014-07-12T16:26:10.166Z
+ * License: MIT
+ */
+!function(){"use strict";void 0===angular.element.prototype.querySelectorAll&&(angular.element.prototype.querySelectorAll=function(e){return angular.element(this[0].querySelectorAll(e))}),angular.module("ui.select",[]).constant("uiSelectConfig",{theme:"bootstrap",placeholder:"",refreshDelay:1e3}).service("uiSelectMinErr",function(){var e=angular.$$minErr("ui.select");return function(){var t=e.apply(this,arguments),c=t.message.replace(new RegExp("\nhttp://errors.angularjs.org/.*"),"");return new Error(c)}}).service("RepeatParser",["uiSelectMinErr",function(e){var t=this;t.parse=function(t){if(!t)throw e("repeat","Expected 'repeat' expression.");var c=t.match(/^\s*([\s\S]+?)\s+in\s+([\s\S]+?)(?:\s+track\s+by\s+([\s\S]+?))?\s*$/);if(!c)throw e("iexp","Expected expression in form of '_item_ in _collection_[ track by _id_]' but got '{0}'.",t);var s=c[1],l=c[2],i=c[3];if(c=s.match(/^(?:([\$\w]+)|\(([\$\w]+)\s*,\s*([\$\w]+)\))$/),!c)throw e("iidexp","'_item_' in '_item_ in _collection_' should be an identifier or '(_key_, _value_)' expression, but got '{0}'.",s);return{lhs:s,rhs:l,trackByExp:i}},t.getGroupNgRepeatExpression=function(){return"($group, $items) in $select.groups"},t.getNgRepeatExpression=function(e,t,c,s){var l=e+" in "+(s?"$items":t);return c&&(l+=" track by "+c),l}}]).controller("uiSelectCtrl",["$scope","$element","$timeout","RepeatParser","uiSelectMinErr",function(e,t,c,s,l){function i(){o.resetSearchInput&&(o.search=a,o.selected&&o.items.length&&(o.activeIndex=o.items.indexOf(o.selected)))}function n(e){var t=!0;switch(e){case h.Down:o.activeIndex<o.items.length-1&&o.activeIndex++;break;case h.Up:o.activeIndex>0&&o.activeIndex--;break;case h.Tab:case h.Enter:o.select(o.items[o.activeIndex]);break;case h.Escape:o.close();break;default:t=!1}return t}function r(){var e=t.querySelectorAll(".ui-select-choices-content"),c=e.querySelectorAll(".ui-select-choices-row");if(c.length<1)throw l("choices","Expected multiple .ui-select-choices-row but got '{0}'.",c.length);var s=c[o.activeIndex],i=s.offsetTop+s.clientHeight-e[0].scrollTop,n=e[0].offsetHeight;i>n?e[0].scrollTop+=i-n:i<s.clientHeight&&(o.isGrouped&&0===o.activeIndex?e[0].scrollTop=0:e[0].scrollTop-=s.clientHeight-i)}var o=this,a="";o.placeholder=void 0,o.search=a,o.activeIndex=0,o.items=[],o.selected=void 0,o.open=!1,o.focus=!1,o.focusser=void 0,o.disabled=void 0,o.resetSearchInput=void 0,o.refreshDelay=void 0;var u=t.querySelectorAll("input.ui-select-search");if(1!==u.length)throw l("searchInput","Expected 1 input.ui-select-search but got '{0}'.",u.length);o.activate=function(e){o.disabled||(i(),o.open=!0,c(function(){o.search=e||o.search,u[0].focus()}))},o.parseRepeatAttr=function(t,c){function i(t){o.groups={},angular.forEach(t,function(t){var s=e.$eval(c),l=angular.isFunction(s)?s(t):t[s];o.groups[l]?o.groups[l].push(t):o.groups[l]=[t]}),o.items=[],angular.forEach(Object.keys(o.groups).sort(),function(e){o.items=o.items.concat(o.groups[e])})}function n(e){o.items=e}var r=s.parse(t),a=c?i:n;o.isGrouped=!!c,o.itemProperty=r.lhs,e.$watchCollection(r.rhs,function(e){if(void 0===e||null===e)o.items=[];else{if(!angular.isArray(e))throw l("items","Expected an array but got '{0}'.",e);a(e)}})};var d;o.refresh=function(t){void 0!==t&&(d&&c.cancel(d),d=c(function(){e.$eval(t)},o.refreshDelay))},o.setActiveItem=function(e){o.activeIndex=o.items.indexOf(e)},o.isActive=function(e){return o.items.indexOf(e[o.itemProperty])===o.activeIndex},o.select=function(e){o.selected=e,o.close()},o.close=function(){o.open&&(i(),o.open=!1,o.focusser[0].focus())};var h={Enter:13,Tab:9,Up:38,Down:40,Escape:27};u.on("keydown",function(t){if(o.items&&o.items.length>=0){var c=t.which;switch(e.$apply(function(){var e=n(c);e&&(t.preventDefault(),t.stopPropagation())}),c){case h.Down:case h.Up:r()}}}),e.$on("$destroy",function(){u.off("keydown")})}]).directive("uiSelect",["$document","uiSelectConfig","uiSelectMinErr","$compile",function(e,t,c,s){return{restrict:"EA",templateUrl:function(e,c){var s=c.theme||t.theme;return s+"/select.tpl.html"},replace:!0,transclude:!0,require:["uiSelect","ngModel"],scope:!0,controller:"uiSelectCtrl",controllerAs:"$select",link:function(t,l,i,n,r){function o(e){var c=!1;c=window.jQuery?window.jQuery.contains(l[0],e.target):l[0].contains(e.target),c||(a.close(),t.$digest())}var a=n[0],u=n[1],d=angular.element("<input ng-disabled='$select.disabled' class='ui-select-focusser ui-select-offscreen' type='text' aria-haspopup='true' role='button' />");s(d)(t),a.focusser=d,l.append(d),d.bind("focus",function(){t.$evalAsync(function(){a.focus=!0})}),d.bind("blur",function(){t.$evalAsync(function(){a.focus=!1})}),d.bind("keydown",function(e){e.which===h.TAB||h.isControl(e)||h.isFunctionKey(e)||e.which===h.ESC||((e.which==h.DOWN||e.which==h.UP||e.which==h.ENTER||e.which==h.SPACE)&&(e.preventDefault(),e.stopPropagation(),a.activate()),t.$digest())}),d.bind("keyup input",function(e){e.which===h.TAB||h.isControl(e)||h.isFunctionKey(e)||e.which===h.ESC||e.which==h.ENTER||(a.activate(d.val()),d.val(""),t.$digest())});var h={TAB:9,ENTER:13,ESC:27,SPACE:32,LEFT:37,UP:38,RIGHT:39,DOWN:40,SHIFT:16,CTRL:17,ALT:18,PAGE_UP:33,PAGE_DOWN:34,HOME:36,END:35,BACKSPACE:8,DELETE:46,isArrow:function(e){switch(e=e.which?e.which:e){case h.LEFT:case h.RIGHT:case h.UP:case h.DOWN:return!0}return!1},isControl:function(e){var t=e.which;switch(t){case h.SHIFT:case h.CTRL:case h.ALT:return!0}return e.metaKey?!0:!1},isFunctionKey:function(e){return e=e.which?e.which:e,e>=112&&123>=e}};i.$observe("disabled",function(){a.disabled=void 0!==i.disabled?i.disabled:!1}),i.$observe("resetSearchInput",function(){var e=t.$eval(i.resetSearchInput);a.resetSearchInput=void 0!==e?e:!0}),t.$watch("$select.selected",function(e){u.$viewValue!==e&&u.$setViewValue(e)}),u.$render=function(){a.selected=u.$viewValue},e.on("click",o),t.$on("$destroy",function(){e.off("click",o)}),r(t,function(e){var t=angular.element("<div>").append(e),s=t.querySelectorAll(".ui-select-match");if(1!==s.length)throw c("transcluded","Expected 1 .ui-select-match but got '{0}'.",s.length);l.querySelectorAll(".ui-select-match").replaceWith(s);var i=t.querySelectorAll(".ui-select-choices");if(1!==i.length)throw c("transcluded","Expected 1 .ui-select-choices but got '{0}'.",i.length);l.querySelectorAll(".ui-select-choices").replaceWith(i)})}}}]).directive("uiSelectChoices",["uiSelectConfig","RepeatParser","uiSelectMinErr","$compile",function(e,t,c,s){return{restrict:"EA",require:"^uiSelect",replace:!0,transclude:!0,templateUrl:function(t){var c=t.parent().attr("theme")||e.theme;return c+"/choices.tpl.html"},compile:function(l,i){var n=t.parse(i.repeat),r=i.groupBy;return function(l,i,o,a,u){if(r){var d=i.querySelectorAll(".ui-select-choices-group");if(1!==d.length)throw c("rows","Expected 1 .ui-select-choices-group but got '{0}'.",d.length);d.attr("ng-repeat",t.getGroupNgRepeatExpression())}var h=i.querySelectorAll(".ui-select-choices-row");if(1!==h.length)throw c("rows","Expected 1 .ui-select-choices-row but got '{0}'.",h.length);h.attr("ng-repeat",t.getNgRepeatExpression(n.lhs,"$select.items",n.trackByExp,r)).attr("ng-mouseenter","$select.setActiveItem("+n.lhs+")").attr("ng-click","$select.select("+n.lhs+")"),u(function(e){var t=i.querySelectorAll(".ui-select-choices-row-inner");if(1!==t.length)throw c("rows","Expected 1 .ui-select-choices-row-inner but got '{0}'.",t.length);t.append(e),s(i)(l)}),a.parseRepeatAttr(o.repeat,r),l.$watch("$select.search",function(){a.activeIndex=0,a.refresh(o.refresh)}),o.$observe("refreshDelay",function(){var t=l.$eval(o.refreshDelay);a.refreshDelay=void 0!==t?t:e.refreshDelay})}}}}]).directive("uiSelectMatch",["uiSelectConfig",function(e){return{restrict:"EA",require:"^uiSelect",replace:!0,transclude:!0,templateUrl:function(t){var c=t.parent().attr("theme")||e.theme;return c+"/match.tpl.html"},link:function(t,c,s,l){s.$observe("placeholder",function(t){l.placeholder=void 0!==t?t:e.placeholder})}}}]).filter("highlight",function(){function e(e){return e.replace(/([.?*+^$[\]\\(){}|-])/g,"\\$1")}return function(t,c){return c&&t?t.replace(new RegExp(e(c),"gi"),'<span class="ui-select-highlight">$&</span>'):t}})}(),angular.module("ui.select").run(["$templateCache",function(e){e.put("bootstrap/choices.tpl.html",'<ul class="ui-select-choices ui-select-choices-content dropdown-menu" role="menu" aria-labelledby="dLabel" ng-show="$select.items.length > 0"><li class="ui-select-choices-group"><div class="divider" ng-show="$index > 0"></div><div ng-show="$select.isGrouped" class="ui-select-choices-group-label dropdown-header">{{$group}}</div><div class="ui-select-choices-row" ng-class="{active: $select.isActive(this)}"><a href="javascript:void(0)" class="ui-select-choices-row-inner"></a></div></li></ul>'),e.put("bootstrap/match.tpl.html",'<button type="button" class="btn btn-default form-control ui-select-match" tabindex="-1" ng-hide="$select.open" ng-disabled="$select.disabled" ng-class="{\'btn-default-focus\':$select.focus}" ;="" ng-click="$select.activate()"><span ng-hide="$select.selected !== undefined" class="text-muted">{{$select.placeholder}}</span> <span ng-show="$select.selected !== undefined" ng-transclude=""></span> <span class="caret"></span></button>'),e.put("bootstrap/select.tpl.html",'<div class="ui-select-bootstrap dropdown" ng-class="{open: $select.open}"><div class="ui-select-match"></div><input type="text" autocomplete="off" tabindex="-1" class="form-control ui-select-search" placeholder="{{$select.placeholder}}" ng-model="$select.search" ng-show="$select.open"><div class="ui-select-choices"></div></div>'),e.put("select2/choices.tpl.html",'<ul class="ui-select-choices ui-select-choices-content select2-results"><li class="ui-select-choices-group" ng-class="{\'select2-result-with-children\': $select.isGrouped}"><div ng-show="$select.isGrouped" class="ui-select-choices-group-label select2-result-label">{{$group}}</div><ul class="select2-result-sub"><li class="ui-select-choices-row" ng-class="{\'select2-highlighted\': $select.isActive(this)}"><div class="select2-result-label ui-select-choices-row-inner"></div></li></ul></li></ul>'),e.put("select2/match.tpl.html",'<a class="select2-choice ui-select-match" ng-class="{\'select2-default\': $select.selected === undefined}" ng-click="$select.activate()"><span ng-hide="$select.selected !== undefined" class="select2-chosen">{{$select.placeholder}}</span> <span ng-show="$select.selected !== undefined" class="select2-chosen" ng-transclude=""></span> <span class="select2-arrow"><b></b></span></a>'),e.put("select2/select.tpl.html",'<div class="select2 select2-container" ng-class="{\'select2-container-active select2-dropdown-open\': $select.open,\n                \'select2-container-disabled\': $select.disabled,\n                \'select2-container-active\': $select.focus }"><div class="ui-select-match"></div><div class="select2-drop select2-with-searchbox select2-drop-active" ng-class="{\'select2-display-none\': !$select.open}"><div class="select2-search"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" class="ui-select-search select2-input" ng-model="$select.search"></div><div class="ui-select-choices"></div></div></div>'),e.put("selectize/choices.tpl.html",'<div ng-show="$select.open" class="ui-select-choices selectize-dropdown single"><div class="ui-select-choices-content selectize-dropdown-content"><div class="ui-select-choices-group optgroup"><div ng-show="$select.isGrouped" class="ui-select-choices-group-label optgroup-header">{{$group}}</div><div class="ui-select-choices-row" ng-class="{active: $select.isActive(this)}"><div class="option ui-select-choices-row-inner" data-selectable=""></div></div></div></div></div>'),e.put("selectize/match.tpl.html",'<div ng-hide="$select.open || $select.selected === undefined" class="ui-select-match" ng-transclude=""></div>'),e.put("selectize/select.tpl.html",'<div class="selectize-control single"><div class="selectize-input" ng-class="{\'focus\': $select.open, \'disabled\': $select.disabled, \'selectize-focus\' : $select.focus}" ng-click="$select.activate()"><div class="ui-select-match"></div><input type="text" autocomplete="off" tabindex="-1" class="ui-select-search" placeholder="{{$select.placeholder}}" ng-model="$select.search" ng-hide="$select.selected && !$select.open" ng-disabled="$select.disabled"></div><div class="ui-select-choices"></div></div>')}]);
 
 
 
